titulos de producto

--- a/vw/catalogo.html
+++ b/vw/catalogo.html
@@ -123,7 +123,7 @@
                       </a>
                     </div>
                     <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Jordan 1 x Off White</h5>
                     <p class="card-text">Estas Jordans fueron diseñadas por el famoso diseñador Robert L. Doski oriundo de las islas perdidas de alkatraz en honor a los astronautas que llegaron a marte en julio de 2022</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-secondary">Añadir al carro</a>
@@ -139,7 +139,7 @@
                       </a>
                     </div>
                     <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Jordan 4 Fire Red</h5>
                     <p class="card-text">"Fuego Rojo", referencia a la pelicula el infierno en el cielo, en la que Tom Crouse vuela con un cable de acero por encima de las llamas 
                       y el magma ardiente para salvar a 
                       Lillian J. Rose. los colores hacen referencia a la magma, el cable y la cara de Lillian al tener que saltar de semejante altura para salvarse.</p>
@@ -157,7 +157,7 @@
                       </a>
                     </div>
                     <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Jordan IV blanco y negr</h5>
                     <p class="card-text">Una simple forma de pasar desapersivido sin perder el estilo y la comodidad que te puede brindar la marca, nadie va a mirar tus zapatillas por su colorida paleta, pero si lo haras tu por parecer que caminas sobre las nubes</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-secondary">Añadir al carro</a>
@@ -173,7 +173,7 @@
                       </a>
                     </div>
                     <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Jordan Dior Game ready</h5>
                         <p class="card-text">Game Ready es una Colaboracion de la Marca Dior con Jordan para patrocinar su apoyo al deporte Femenino que viene en alsa y dejar en claro que las mujeres tambien se pueden calzar zapatillas</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-secondary">Añadir al carro</a>
@@ -189,7 +189,7 @@
                       </a>
                     </div>
                     <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Jordan IV pink</h5>
                       <p class="card-text">Como sabemos las Jordan ya no son unicamente para el Basquet, por lo que la marca lanzo estas Jordas "Pink" las cuales fueron usadas por el grupo de K-pop "BACKPINK" en el estreno de su gira mundial por europa. estas jordans estan hechas para sentir el ritmo.</p>
                   <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-secondary">Añadir al carro</a>
@@ -206,7 +206,7 @@
                       </a> 
                     </div>
                     <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Jordan travis scott</h5>
                     <p class="card-text">Un pedido especial para el famoso cantante de Rap Travis Scott se volvio viral en las redes y hoy es una zapatilla que rompe taquilla</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-secondary">Añadir al carro</a>
