--- a/vw/carrito.html
+++ b/vw/carrito.html
@@ -117,7 +117,7 @@
                       </a>
                     </div>
                     <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Jordan 1 x Off White</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-secondary">Añadir al carro</a>
@@ -131,7 +131,7 @@
                   </a>
                   </div>
                   <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Jordan IV pink</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Comprar</a>
                 <a href="#" class="btn btn-secondary">Añadir al carro</a>
@@ -147,7 +147,7 @@
                         </a> 
                         </div>
                         <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Jordan 1 travis scott</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="#" class="btn btn-primary">Comprar</a>
                       <a href="#" class="btn btn-secondary">Añadir al carro</a>
